# otel-example-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.app-only.yml  docker-compose.yml  init.sql  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py  telemetry.py
app/middleware/: __init__.py
app/repository/: user_repository.py
app/routes/: health.py  metrics.py  user_routes.py
app/schemas/: user_schema.py
config/: alloy.alloy
config/grafana/provisioning/dashboards/: api-monitoring-dashboard.json
tests/unit/: conftest.py  test_user_repository.py  test_user_routes.py
